[package]
name = "rope"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true
[dependencies.pyo3]
version = "0.15.1"
features = ["auto-initialize"]
[dependencies]
gstuff = {version = "*", features = ["nightly", "rdtsc", "re"]}
memchr = "*"
ropey = "*"
rand = "*"
strings = "*"
jumprope = "*"
imbl = "*"
